--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
      our meniu
     </header>
     <section>
-        chicken
+        <h1>Chicken</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, vero. Odit accusantium sequi quasi earum consectetur ipsam dolor nemo impedit, magni quas labore illum ex in. Sunt pariatur quaerat nemo.</p>
     </section>
     <section>
-        beef
+        <h1>Beef</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum praesentium impedit obcaecati ullam exercitationem voluptates mollitia commodi consequuntur quo nemo quisquam, minus iusto facere eligendi est. Accusamus tempora dolorum temporibus!</p>
     </section>
     <section>
-        sushi
+        <h1>Sushi</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores facere a earum voluptate esse fugit ipsa hic cupiditate enim, nesciunt impedit architecto rerum culpa ipsum provident quasi sit, officia accusantium?</p>
     </section>
     <footer>
 
