--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-     our meniu
+     Our meniu
     </header>
     <section>
         <h1>Chicken</h1>
@@ -22,6 +22,7 @@
         <h1>Sushi</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores facere a earum voluptate esse fugit ipsa hic cupiditate enim, nesciunt impedit architecto rerum culpa ipsum provident quasi sit, officia accusantium?</p>
     </section>
+
     <footer>
 
     </footer>
